Fixed color contrast

--- a/djangoproject/scss/_style.scss
+++ b/djangoproject/scss/_style.scss
@@ -920,7 +920,7 @@ blockquote {
         background: $green-dark;
         margin-top: 20px;
         padding: 10px 0 30px;
-        color: $green-medium-dark;
+        color: $green;
 
         .footer-logo {
             float: left;
@@ -1106,7 +1106,7 @@ blockquote {
     }
 
     em {
-        color: $green-very-light;
+        color: $white;
         font-style: normal;
     }
 
