--- a/djangoproject/scss/_utils.scss
+++ b/djangoproject/scss/_utils.scss
@@ -6,9 +6,9 @@ $text-light: #798780;
 $gray-line: #CFE3DC;
 $green-very-light: #C9F0DD;
 $green-light: #93D7B7;
-$green-medium: #44B78B;
+$green-medium: #3DA47D;
 $green-medium-dark: #2B8C67;
-$green: #20AA76;
+$green: #1FA371;
 $green-dark: #0C4B33;
 $white: #F1FFF7;
 $warning-yellow: #FFFDF1;
